--- a/Components/Modules/RecommendationComp.razor.css
+++ b/Components/Modules/RecommendationComp.razor.css
@@ -36,6 +36,13 @@ a{
     h2 {
         font-size: 1rem;
         font-weight: bolder;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        line-height: 1.2rem;
+        /* max-height: 32px; Limiting to 2 lines */
+        -webkit-line-clamp: 2; /* Specify the number of lines */
+        -webkit-box-orient: vertical;
     }
     .videoPage {
         display: flex !important;
